fix file names to avoid shared source cache conflicts
git-svn-id: file:///srv/repos/svn-community/svn@128534 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -12,7 +12,7 @@ url="http://fholgado.com/minibufexpl"
 license=('custom')
 depends=('vim')
 groups=('vim-plugins')
-source=("https://github.com/fholgado/minibufexpl.vim/archive/v${pkgver}.tar.gz"
+source=("$pkgname-$pkgver.tar.gz::https://github.com/fholgado/minibufexpl.vim/archive/v${pkgver}.tar.gz"
         'LICENSE')
 md5sums=('31dde98470e3d76cc1fb437baf8760f8'
          'aa6bc9c176702f23ee9f8476f72e3971')
