--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=owncloud
 pkgver=8.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A cloud server to store your files centrally on a hardware controlled by you"
 arch=('any')
 url="http://owncloud.org/"
@@ -34,6 +34,11 @@ md5sums=('d2c1366be0756c24e1f5cfc02f80269f'
          'SKIP'
          '64c6edf88bcbb37d063e4bf77b39237f')
 
+prepare() {
+  cd $srcdir/owncloud
+  sed -i "s|'appstoreenabled'.*|'appstoreenabled' => false,|" config/config.sample.php
+}
+
 package() {
   # install license
   install -d ${pkgdir}/usr/share/licenses/${pkgname}
@@ -51,4 +56,7 @@ package() {
   mv ${pkgdir}/usr/share/webapps/owncloud/config ${pkgdir}/etc/webapps/${pkgname}/config
   chown -R http:http ${pkgdir}/etc/webapps/${pkgname}/config
   ln -s /etc/webapps/${pkgname}/config ${pkgdir}/usr/share/webapps/owncloud/config
+
+  find ${pkgdir} -type f -print0 | xargs -0 chmod 0640
+  find ${pkgdir} -type d -print0 | xargs -0 chmod 0750
 }
