--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=owncloud
 pkgver=8.0.0
-pkgrel=2
+pkgrel=3
 pkgdesc="A cloud server to store your files centrally on a hardware controlled by you"
 arch=('any')
 url="http://owncloud.org/"
@@ -54,9 +54,12 @@ package() {
 
   # move config to /etc
   mv ${pkgdir}/usr/share/webapps/owncloud/config ${pkgdir}/etc/webapps/${pkgname}/config
-  chown -R http:http ${pkgdir}/etc/webapps/${pkgname}/config
+  chown -R http:http ${pkgdir}/etc/webapps/${pkgname}
   ln -s /etc/webapps/${pkgname}/config ${pkgdir}/usr/share/webapps/owncloud/config
+  chgrp -R http ${pkgdir}/usr/share/webapps/${pkgname}
 
-  find ${pkgdir} -type f -print0 | xargs -0 chmod 0640
-  find ${pkgdir} -type d -print0 | xargs -0 chmod 0750
+#  find ${pkgdir}/usr/share/webapps/owncloud -type f -print0 | xargs -0 chmod 0640
+#  find ${pkgdir}/usr/share/webapps/owncloud -type d -print0 | xargs -0 chmod 0750
+#  find ${pkgdir}/etc/webapps/owncloud -type f -print0 | xargs -0 chmod 0640
+#  find ${pkgdir}/etc/webapps/owncloud -type d -print0 | xargs -0 chmod 0750
 }
