git-svn-id: file:///srv/repos/svn-community/svn@128571 9fca08f4-af9d-4005-b8df-a31f2cc04f65

--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -56,7 +56,7 @@ package() {
   mv ${pkgdir}/usr/share/webapps/owncloud/config ${pkgdir}/etc/webapps/${pkgname}/config
   chown -R http:http ${pkgdir}/etc/webapps/${pkgname}
   ln -s /etc/webapps/${pkgname}/config ${pkgdir}/usr/share/webapps/owncloud/config
-  chgrp -R http ${pkgdir}/usr/share/webapps/${pkgname}
+  chown -R root:http ${pkgdir}/usr/share/webapps/${pkgname}
 
 #  find ${pkgdir}/usr/share/webapps/owncloud -type f -print0 | xargs -0 chmod 0640
 #  find ${pkgdir}/usr/share/webapps/owncloud -type d -print0 | xargs -0 chmod 0750
