--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=gtkpod
 pkgver=2.1.4
-pkgrel=3
+pkgrel=4
 pkgdesc="A platform independent GUI for Apple's iPod using GTK3"
 arch=('i686' 'x86_64')
 url="http://gtkpod.sourceforge.net"
@@ -21,11 +21,13 @@ install=gtkpod.install
 source=("http://downloads.sourceforge.net/gtkpod/$pkgname-$pkgver.tar.gz")
 md5sums=('66c12ccb529c0f7de9a48a7f0d277c80')
 
+prepare() {
+  cd "$srcdir/$pkgname-$pkgver"
+  sed -i 's#python#python2#' scripts/sync-palm-jppy.py
+}
+
 build() {
   cd "$srcdir/$pkgname-$pkgver"
-
-  sed -i 's#python#python2#' scripts/sync-palm-jppy.py
-
   ./configure --prefix=/usr
   make
 }
