--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=owncloud
 pkgver=8.0.0
-pkgrel=3
+pkgrel=4
 pkgdesc="A cloud server to store your files centrally on a hardware controlled by you"
 arch=('any')
 url="http://owncloud.org/"
@@ -58,8 +58,8 @@ package() {
   ln -s /etc/webapps/${pkgname}/config ${pkgdir}/usr/share/webapps/owncloud/config
   chown -R root:http ${pkgdir}/usr/share/webapps/${pkgname}
 
-#  find ${pkgdir}/usr/share/webapps/owncloud -type f -print0 | xargs -0 chmod 0640
-#  find ${pkgdir}/usr/share/webapps/owncloud -type d -print0 | xargs -0 chmod 0750
+  find ${pkgdir}/usr/share/webapps/owncloud -type f -exec chmod 0644 {} \;
+  find ${pkgdir}/usr/share/webapps/owncloud -type d -exec chmod 0755 {} \;
 #  find ${pkgdir}/etc/webapps/owncloud -type f -print0 | xargs -0 chmod 0640
 #  find ${pkgdir}/etc/webapps/owncloud -type d -print0 | xargs -0 chmod 0750
 }
