--- a/repos/community-x86_64/PKGBUILD
+++ b/repos/community-x86_64/PKGBUILD
@@ -5,11 +5,11 @@
 # Contributor: JerichoKru   <jerichokru(AT)hotmail.com>
 
 pkgname=pragha
-pkgver=1.3.1
-pkgrel=2
+pkgver=1.3.2.1
+pkgrel=1
 pkgdesc="A lightweight GTK+ music manager - fork of Consonance Music Manager."
 arch=('i686' 'x86_64')
-url="http://pragha.wikispaces.com/"
+url="https://pragha-music-player.github.io/"
 license=('GPL3')
 depends=('libnotify' 'libcdio-paranoia' 'libclastfm' 'gst-plugins-base'
          'taglib' 'hicolor-icon-theme' 'dbus-glib' 'desktop-file-utils'
@@ -18,15 +18,16 @@ optdepends=('notification-daemon: OSD notification'
             'gst-plugins-good: A collection of gstreamer codecs'
             'gst-plugins-bad: A collection of gstreamer codecs'
             'gst-plugins-ugly: A collection of gstreamer codecs')
-makedepends=('intltool')
+makedepends=('intltool' 'xfce4-dev-tools')
 replaces=('dissonance')
 install=pragha.install
-source=("https://github.com/matiasdelellis/pragha/releases/download/v$pkgver/pragha-$pkgver.tar.bz2")
-sha1sums=('0585b1a079643b5bc0e161b3862d68e407ad78a0')
+source=("$pkgname-$pkgver.zip::https://github.com/pragha-music-player/pragha/archive/v${pkgver}.zip")
+sha1sums=('9dde9db2bd8f09798019fb7ae9378225c74124fb')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
 
+  ./autogen.sh
   CPPFLAGS="-DHAVE_PARANOIA_NEW_INCLUDES" LIBS+="-ldbus-glib-1" \
     ./configure --prefix=/usr \
     --with-gstreamer=1.0
